@@ -8,7 +8,6 @@ package common.customWriter;
 
 import common.customWriter.jena.CustomRelation;
 import org.apache.jena.JenaRuntime;
-//import org.apache.jena.ext.xerces.util.XMLChar;
 import org.apache.jena.iri.IRI;
 import org.apache.jena.iri.IRIFactory;
 import org.apache.jena.rdf.model.*;
@@ -618,7 +617,7 @@ public abstract class CustomBaseXMLWriter implements RDFXMLWriterI  {
      Set the writer property propName to the value obtained from propValue. Return an
      Object representation of the original value.
 
-     @see org.apache.jena.rdf.model.RDFWriterI#setProperty(java.lang.String, java.lang.Object)
+     @see RDFWriterI#setProperty(String, Object)
      */
     @Override
     final synchronized public Object setProperty( String propName, Object propValue ) {
@@ -627,7 +626,7 @@ public abstract class CustomBaseXMLWriter implements RDFXMLWriterI  {
         } else if (propName.equalsIgnoreCase( "showDoctypeDeclaration" )) {
             return setShowDoctypeDeclaration( propValue );
         } else if (propName.equalsIgnoreCase( "minimalPrefixes" )) {
-            try { return new Boolean( !writingAllModelPrefixNamespaces ); }
+            try { return Boolean.valueOf( !writingAllModelPrefixNamespaces ); }
             finally { writingAllModelPrefixNamespaces = !getBoolean( propValue ); }
         } else if (propName.equalsIgnoreCase("xmlbase")) {
             String result = xmlBase;
@@ -638,13 +637,13 @@ public abstract class CustomBaseXMLWriter implements RDFXMLWriterI  {
         } else if (propName.equalsIgnoreCase("width")) {
             return setWidth(propValue);
         } else if (propName.equalsIgnoreCase("longid")) {
-            Boolean result = new Boolean(longId);
+            Boolean result = longId;
             longId = getBoolean(propValue);
             return result;
         } else if (propName.equalsIgnoreCase("attributeQuoteChar")) {
             return setAttributeQuoteChar(propValue);
         } else if (propName.equalsIgnoreCase( "allowBadURIs" )) {
-            Boolean result = new Boolean( !demandGoodURIs );
+            Boolean result = Boolean.valueOf( !demandGoodURIs );
             demandGoodURIs = !getBoolean(propValue);
             return result;
         } else if (propName.equalsIgnoreCase("prettyTypes")) {
@@ -697,7 +696,7 @@ public abstract class CustomBaseXMLWriter implements RDFXMLWriterI  {
     }
 
     private Integer setWidth(Object propValue) {
-        Integer oldValue = new Integer(width);
+        Integer oldValue = Integer.valueOf(width);
         if (propValue instanceof Integer) {
             width = ((Integer) propValue).intValue();
         } else {
@@ -711,7 +710,7 @@ public abstract class CustomBaseXMLWriter implements RDFXMLWriterI  {
     }
 
     private Integer setTab(Object propValue) {
-        Integer result = new Integer(tabSize);
+        Integer result = Integer.valueOf(tabSize);
         if (propValue instanceof Integer) {
             tabSize = ((Integer) propValue).intValue();
         } else {
@@ -864,7 +863,7 @@ public abstract class CustomBaseXMLWriter implements RDFXMLWriterI  {
             IRI iri = factory.create( uri );
 
             if (iri.hasViolation(false) )
-                throw new BadURIException( "Only well-formed absolute URIrefs can be included in RDF/XML output: "
+                throw new RuntimeException( "Only well-formed absolute URIrefs can be included in RDF/XML output: "
                         + (iri.violations(false).next()).getShortMessage());
         }
 
